--- a/reminders.html
+++ b/reminders.html
@@ -13,13 +13,13 @@
   <title>Remainders| PlanIT</title>
 </head>
 
-<body class="bg-gray-300">
+<body class="bg-gray-200 dark:bg-gray-300">
   <!--navbar starts-->
-  <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
+  <nav class="bg-[#77A661] dark:bg-[#638951] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">PlanIT</span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -34,15 +34,15 @@
       <!--Dropdown menu starts-->
       <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
         <ul
-          class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661]">
+          class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661] dark:bg-[#638951]">
           <li>
             <a href="index.html"
-              class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-black md:p-0 md:dark:bg-transparent"
+              class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-white sm:dark:hover:text-black sm:hover:text-white md:p-0 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
           <li>
             <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
-              class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-black dark:focus:text-white dark:border-gray-700 dark:hover:bg-[#8CA874] md:dark:hover:bg-transparent">Menu
+              class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 md:w-auto dark:text-white md:dark:hover:text-black dark:focus:text-white dark:border-gray-700 dark:hover:bg-[#8CA874] md:dark:hover:bg-transparent">Menu
               <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                 viewBox="0 0 10 6">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -50,7 +50,7 @@
               </svg></button>
             <!-- Dropdown menu -->
             <div id="dropdownNavbar"
-              class="z-10 hidden font-normal bg-gray-500 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+              class="z-10 hidden font-normal bg-gray-300 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
                   <a href="documentation.html"
@@ -74,12 +74,12 @@
           <!--dropdown menu ends-->
           <li>
             <a href="clock.html"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">Clock</a>
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">Clock</a>
           </li>
 
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">About
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent">About
               Me</a>
           </li>
         </ul>
@@ -97,26 +97,28 @@
     <section class="currentreminder my-5">
       <div class="flex flex-col items-center text-center space-y-2" id="reminderarea">
         <p class="flex text-start w-screen px-2 text-gray-500">Current Remainders: </p>
+        <!-- <div class="reminder mx-auto w-full outline-blue-500 rounded-md px-5 py-2 font-serif bg-blue-200 my-5 flex space-x-6"><input type="checkbox" class="done mr-7" name="done">This is a sample reminder</div> -->
       </div>
     </section>
     <hr class="bg-gray-400 h-0.5 rounded-md my-4">
     <section class="donereminder my-3">
       <div class="flex flex-col items-center text-center space-y-2" id="completedreminder">
         <p class="flex text-start w-screen px-2 text-gray-500">Done Remainders: </p>
+        <!-- <div class="donereminder mx-auto w-full text-left outline-blue-500 rounded-md px-5 sm:px-20 py-2 font-serif line-through text-gray-300 bg-green-100 my-5">${reminder}</div> -->
       </div>
     </section>
     <hr class="bg-gray-400 h-0.5 rounded-md my-4">
   </main>
   <!--Main Ends-->
   <!--footer starts-->
-  <footer class="bg-[#77A661] rounded-lg shadow m-4">
+  <footer class="bg-[#77A661] dark:bg-[#638951] rounded-lg shadow m-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
       <div class="sm:flex sm:items-center sm:justify-between">
         <a href="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
           <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">PlanIT</span>
         </a>
-        <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-white">
+        <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 dark:text-white">
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
               Me</a>
