--- a/tasks.html
+++ b/tasks.html
@@ -13,13 +13,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-200">
+<body class="bg-gray-200 dark:bg-gray-300">
   <!--navbar starts-->
-  <nav class="bg-[#77A661] rounded-lg my-2 mx-3 sm:mx-10">
+  <nav class="bg-[#77A661] dark:bg-[#638951] rounded-lg my-2 mx-3 sm:mx-10">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="assets/pngegg.png" class="h-8" alt="" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
+        <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">PlanIT</span>
       </a>
       <button data-collapse-toggle="navbar-dropdown" type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -34,15 +34,15 @@
       <!--Dropdown menu starts-->
       <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
         <ul
-          class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661]">
+          class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-300 rounded-lg bg-[#668b55e0] md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-[#77A661] dark:bg-[#638951]">
           <li>
             <a href="index.html"
-              class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-black md:p-0 md:dark:bg-transparent"
+              class="block py-2 px-3 text-white bg-[#8CA874] rounded md:bg-transparent md:text-white sm:dark:hover:text-black sm:hover:text-white md:p-0 md:dark:bg-transparent"
               aria-current="page">Home</a>
           </li>
           <li>
             <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
-              class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-black dark:focus:text-white dark:border-gray-700 dark:hover:bg-[#8CA874] md:dark:hover:bg-transparent">Menu
+              class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 md:w-auto dark:text-white md:dark:hover:text-black dark:focus:text-white dark:border-gray-700 dark:hover:bg-[#8CA874] md:dark:hover:bg-transparent">Menu
               <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                 viewBox="0 0 10 6">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -50,7 +50,7 @@
               </svg></button>
             <!-- Dropdown menu -->
             <div id="dropdownNavbar"
-              class="z-10 hidden font-normal bg-gray-500 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+              class="z-10 hidden font-normal bg-gray-300 divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
               <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                 <li>
                   <a href="documentation.html"
@@ -74,12 +74,12 @@
           <!--dropdown menu ends-->
           <li>
             <a href="clock.html"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">Clock</a>
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">Clock</a>
           </li>
 
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-black md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] dark:hover:text-white md:dark:hover:bg-transparent">About
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0  md:p-0 dark:text-white md:dark:hover:text-black dark:hover:bg-[#8CA874] sm:hover:text-white dark:hover:text-white md:dark:hover:bg-transparent">About
               Me</a>
           </li>
         </ul>
@@ -114,14 +114,14 @@
     <hr class="h-0.5 bg-gray-400 rounded-md my-4">
   </main>
   <!--footer starts-->
-  <footer class="bg-[#77A661] rounded-lg shadow m-4">
+  <footer class="bg-[#77A661] dark:bg-[#638951] rounded-lg shadow m-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
       <div class="sm:flex sm:items-center sm:justify-between">
         <a href="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
           <img src="assets/pngegg.png" class="h-8" alt="PlanIT Logo" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">PlanIT</span>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white dark:text-white">PlanIT</span>
         </a>
-        <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-white">
+        <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 dark:text-white">
           <li>
             <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/" class="hover:underline me-4 md:me-6">About
               Me</a>
@@ -141,12 +141,10 @@
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="footerlinks flex flex-wrap space-y-2 sm:space-y-0 sm:justify-between">
         <span class="space-x-4 text-lg sm:text-xl">
-          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin" class=""><i
-              class="fa-brands fa-linkedin hover:text-white"></i></a>
-          <a href="https://twitter.com/DasBiprangshu" id="twitter" class=""><i
-              class="fa-brands fa-x-twitter hover:text-white"></i></a>
-          <a href="https://github.com/jarvis1704" id="github" class=""><i
-              class="fa-brands fa-github hover:text-white"></i></a>
+          <a href="https://www.linkedin.com/in/biprangshu-das-34017427a/" id="linkedin"><i
+              class="fa-brands fa-linkedin"></i></a>
+          <a href="https://twitter.com/DasBiprangshu" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://github.com/jarvis1704" id="github"><i class="fa-brands fa-github"></i></a>
         </span>
         <span class="block text-sm text-white sm:text-end dark:text-white my-1 ml-auto">© 2024 <a href="https://jarvis1704.github.io/aboutme-BiprangshuDas/"
             class="hover:underline">Biprangshu Das</a>. All Rights Reserved.</span>
